# kino-avionics

./: .gitmodules  README.md  readme.md  update_index.sh
dl1_pima/: dl1_pima_snap.scr
dl1_pima/doc/: dl1_materials.ods
doc/: kino_icd.ods
fs1_kino/: fs1_kino.sch
kino/: fs1_gila_materials.gdsheet
software/kino_arduino/: pio_setup.sh  platformio.ini
software/kino_arduino/src/: main.cpp
software/kino_arduino/test/: test_atmos_bme280.cpp  test_gps_neo6m.cpp
software/kino_arduino/test/test_atmos/: test_atmos_bme280.cpp
software/kino_arduino/test/test_gps/: test_gps_neo6m.cpp
software/kino_arduino/test/test_imu/: test_imu_mpu9250.cpp
software/kino_rpi/: .gitignore  CMakeLists.txt  exec.c  makefile  pigpio_library.html  rpi_setup.md
software/kino_xiao/include/: SeeeduinoXIAO_SPISlave.h
software/kino_xiao/src/: SeeeduinoXIAO_SPISlave.cpp
